feat: implement plain, uppercase, and lowercase tags